Grease Pencil: Layer Settings does not copy on "Separate Selected Points" #89234

Closed
opened 2021-06-17 13:43:22 +02:00 by Keen Foong · 11 comments

System Information
Operating system: Linux-5.8.0-55-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.80

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-17 00:06, hash: c73be23e17
Tested on 2.93 build as well.

Short description of error
Layer settings in grease pencil does not copy over to the new object on "Separate Points". Everything else copies correctly, like the modifier and effects. However the layer settings for the points doesn't copy over such as the colour, opacity and masks.

Exact steps for others to reproduce the error
SeparateLayersettings.gif
Using the attached Blend file

  • Select any points in Grease Pencil Edit mode.
  • Press "P", -> Separate Points. Can be any of the options here really.

Everything Turns black because the layer settings such as colour, opacity, masks aren't copied over.

Apple-SeparatingNotGettingColours.blend

**System Information** Operating system: Linux-5.8.0-55-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.80 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-17 00:06, hash: `c73be23e17` Tested on 2.93 build as well. **Short description of error** Layer settings in grease pencil does not copy over to the new object on "Separate Points". Everything else copies correctly, like the modifier and effects. However the layer settings for the points doesn't copy over such as the colour, opacity and masks. **Exact steps for others to reproduce the error** ![SeparateLayersettings.gif](https://archive.blender.org/developer/F10177551/SeparateLayersettings.gif) Using the attached Blend file - Select any points in Grease Pencil Edit mode. - Press "P", -> Separate Points. Can be any of the options here really. # Everything Turns black because the layer settings such as colour, opacity, masks aren't copied over. [Apple-SeparatingNotGettingColours.blend](https://archive.blender.org/developer/F10177534/Apple-SeparatingNotGettingColours.blend)
Author

Added subscriber: @kfoong

Added subscriber: @kfoong

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Antonio Vazquez self-assigned this 2021-06-17 20:06:54 +02:00

This issue was referenced by 577d6d3f87

This issue was referenced by 577d6d3f872206c99dc95c8afaff47ca0339d7fc

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

Wow thanks for the speedy fix!

Wow thanks for the speedy fix!
Author

Ah sorry, couldn't help but notice that some of the other settings may not be copied over.

  • The Transform (.location)
  • Use lights setting (.use_lights)
  • Masking (.use_mask_layer, and the the layer masks)
  • Relations (.parent, .parent_type, .pass_index, .viewlayer_render)

Unless I'm mistaken, these settings are missing as well?

Example of the Relations and transforms
Peek 2021-06-18 10-07.gif

Ah sorry, couldn't help but notice that some of the other settings may not be copied over. - The Transform (.location) - Use lights setting (.use_lights) - Masking (.use_mask_layer, and the the layer masks) - Relations (.parent, .parent_type, .pass_index, .viewlayer_render) Unless I'm mistaken, these settings are missing as well? Example of the Relations and transforms ![Peek 2021-06-18 10-07.gif](https://archive.blender.org/developer/F10178862/Peek_2021-06-18_10-07.gif)
Author

Hi @antoniov Thanks for your bug fix earlier. However I just tested on the newest master (hash: 3da25dc625) and yes unfortunately it looks like some settings aren't copied over.
Peek 2021-06-21 02-51.gif

  • Masking (.use_mask_layer, and the the layer masks)
  • Use lights setting (.use_lights)

Tested that the colours worked though, great that its working now.

Hi @antoniov Thanks for your bug fix earlier. However I just tested on the newest master (hash: `3da25dc625`) and yes unfortunately it looks like some settings aren't copied over. ![Peek 2021-06-21 02-51.gif](https://archive.blender.org/developer/F10183621/Peek_2021-06-21_02-51.gif) - Masking (.use_mask_layer, and the the layer masks) - Use lights setting (.use_lights) Tested that the colours worked though, great that its working now.

For Masking...uuumm..not good idea. There are a lot of situations when duplicating the Mask layers can go wrong. If you want copy Mask layers, better duplicate the object and delete what you don't need, but in separate operator is not good idea.

I'm going to recheck lighting... I was sure I had fixed that.

For Masking...uuumm..not good idea. There are a lot of situations when duplicating the Mask layers can go wrong. If you want copy Mask layers, better duplicate the object and delete what you don't need, but in separate operator is not good idea. I'm going to recheck lighting... I was sure I had fixed that.
Author

Which situations could mask layers cause issues?

Just tested on normal vertices. It seems like if you separate vertices from a 3D object, it copies pretty much everything. Including the rigs, the vertex groups, vertex colours, and shape keys.

vertexseparate.gif

It'd probably should be the same for Masks? At least if you have the mask layer selected as well.

Which situations could mask layers cause issues? Just tested on normal vertices. It seems like if you separate vertices from a 3D object, it copies pretty much everything. Including the rigs, the vertex groups, vertex colours, and shape keys. ![vertexseparate.gif](https://archive.blender.org/developer/F10187664/vertexseparate.gif) It'd probably should be the same for Masks? At least if you have the mask layer selected as well.

@kfoong I think the commit fae5a907d4 does what you want.

@kfoong I think the commit fae5a907d4d1 does what you want.
Author

@antoniov Just tested. Thanks so much!

@antoniov Just tested. Thanks so much!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89234
No description provided.