Fix T89234: Gpencil Separate doesn't copy settings in Stroke/Point mode

Some values were not copied from the old layer to the new one as Tint or Opacity factor.

The error affected to Strokes and Point mode